--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Calculadora de Gastos de Combustivel.</p>
 	<p>HTML, CSS e JavaScript</p>
 	<ul>
-            <li><a href="https://github.com/arieviloanelym/meudesenvolvimento/blob/main/Primeiro%20Projeto%20em%20HTML%2C%20CSS%20e%20JS">GitHub</a></li>
+            <li><a href="https://arieviloanelym.github.io/meudesenvolvimento.github.io/">Calculadora</a></li>
         </ul>
     </section>
     <section>
