--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Portfólio</title>
+    <title>Curriculo Mylena Oliveira</title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
