--- a/contato.html
+++ b/contato.html
@@ -1,3 +1,4 @@
+<!--Esta é a aba de contato--> 
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -22,11 +23,11 @@
             </ul>
         </nav>
         </div>
+<!-- Estou incluindo um formulario para informar Email e telefoe de contato, formulario com input--> 
     <section>
       <form action="" method="post">
-		Email&nbsp;              <input type="text" name="email" value="mylenacristina86@gmail.com" readonly><br>
+		Email&nbsp;<input type="text" name="email" value="mylenacristina86@gmail.com" readonly><br>
         	Telefone<input type="text" name="telefone" value="41 99589-4252" readonly>
-  
 	</form>
     </section>
     </div>
