--- a/formacao.html
+++ b/formacao.html
@@ -1,3 +1,4 @@
+<!--Pagina onde vai constar a formação--> 
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -10,6 +11,7 @@
     <header>
         <h1>Formação</h1>
     </header>
+<!--Está infomação vai conter em todas as pagimas para facil acesso as telas e evitar o botão voltar--> 
     <div class="content">
     <div style="margin-top: 10px;">
     <nav>
