--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Index, pagina inicial, contendo as informações necessarias, aqui nesta pogina irá constar o portifolio--> 
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -11,6 +12,7 @@
     <header>
         <h1>Meu Portfólio</h1>
     </header>
+<!--Está parte irá constar em todas as paginas, para facilitar acesso e evitar uso de voltar--> 
     <div class="content">
     <div style="margin-top: 10px;">
         <nav>
