--- a/links.html
+++ b/links.html
@@ -1,3 +1,4 @@
+<!--Pagina de links de acesso ao perfil em outros sites--> 
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -10,6 +11,7 @@
     <header>
         <h1>Links</h1>
     </header>
+<!--Está parte irá constar em todas as paginas, para facilitar acesso e evitar uso de voltar--> 
     <div class="content">
     <div style="margin-top: 10px;">
         <nav>
