--- a/sobre.html
+++ b/sobre.html
@@ -1,3 +1,4 @@
+<!--Pagina que fala um pouco sobre a pessoa, o que ela gosta de fazer e o que faz.--> 
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -10,6 +11,7 @@
     <header>
         <h1>Sobre</h1>
     </header>
+<!--Está parte irá constar em todas as paginas, para facilitar acesso e evitar uso de voltar--> 
     <div class="content">
     <div style="margin-top: 10px;">
         <nav>
