--- a/contato.html
+++ b/contato.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Contato</h1>
     </header>
+<!--Está infomação vai conter em todas as pagimas para facil acesso as telas e evitar o botão voltar-->
     <div class="content">
     <div style="margin-top: 10px;">
         <nav>
@@ -23,7 +24,8 @@
             </ul>
         </nav>
         </div>
-<!-- Estou incluindo um formulario para informar Email e telefoe de contato, formulario com input--> 
+<!-- Estou incluindo um formulario para informar Email e telefoe de contato, 
+formulario com input, tive que bloquear para que ficasse o email e o teleofne--> 
     <section>
       <form action="" method="post">
 		Email&nbsp;<input type="text" name="email" value="mylenacristina86@gmail.com" readonly><br>
